# OpenACD

./: .gitignore  .gitmodules  .sipxecs.mk  LICENSE  Makefile  Makefile.am  README.markdown  Rakefile  VERSION  agent.html  agent_auth.html  agent_auth_mnesia.html  agent_channel.html  agent_dialplan_connection.html  agent_dialplan_listener.html  agent_dummy_connection.html  agent_manager.html  agent_tcp_client.html  agent_tcp_connection.html  agent_tcp_listener.html  agent_web_connection.html  agent_web_listener.html  boot.rb  buildcerts.sh  call_queue.COVER.out  call_queue.beam  call_queue.html  call_queue_config.html  call_queue_config_mnesia.html  cdr.html  cdr_csv.html  cdr_dets.html  cdr_odbc.html  configure.ac  cook.html  cpx.html  cpx_agent_connection.html  cpx_agent_event.html  cpx_agent_tcp_connection.html  cpx_agent_tcp_listener.html  (+55 more)
attic/: freeswitch_outbound.erl
config/: app.config  vm.args
contrib/dojo/: README.mkd  agentUI.profile.js
contrib/dojo/agentUI/: EmailPane.html  EmailPane.js  MediaTab.js  base.js  emailLib.js  logLib.js  util.js
contrib/misc/: Rakefile  gen_leader.erl
contrib/misc/src/: freeswitch.erl  gen_leader.erl  nodefindersrv.erl  trunc_io.erl
contrib/mochiweb/: Rakefile
contrib/mochiweb/doc/: mochifmt.html  mochifmt_records.html  mochifmt_std.html  (+20 more)
contrib/sipxplugin/: Emakefile  Makefile
doc/: overview.edoc
ebin/: call_queue.beam  cpx.app  erlmongo.app  queue_manager.beam  sipxplugin.app  test_coverage.beam
include/: agent.hrl  call.hrl  cpx.hrl  cpxhelp.txt  erlmongo.hrl  gen_media.hrl  gen_server_test.hrl  gen_spec.hrl  log.hrl  odbc_kgb.hrl  queue.hrl  smtp.hrl  web.hrl
include_apps/oacd_dummy/: rebar.config  success_message
include_apps/oacd_freeswitch/: hooks.sh  rebar.config  success_message
misc/: 01_agent_control.xml  agent_states.sql  billing_records.sql  call queue_opt.dia  cook.dia  load_agents_example.hrl  openacd_dialplan_example.xml  supervisor-tree.dia  supervisor-tree_add.dia
priv/: integration_file.example
proto_src/: cpx_agent.proto  cpx_base.proto  cpx_cdr.proto  cpx_freeswitch.proto
rel/: rebar.config  reltool.config
rel/files/: app.config  nodetool  openacd  vm.args
scripts/: nodetool  openacd
src/: .agent.erl.swo  OpenACD.app.src  agent.erl  agent_auth.erl  agent_auth_mnesia.erl  agent_channel.erl  agent_connection.erl  agent_connection_listener.erl  agent_dialplan_connection.erl  agent_dialplan_listener.erl  agent_dummy_connection.erl  agent_manager.erl  agent_tcp_client.erl  agent_tcp_connection.erl  agent_tcp_listener.erl  agent_web_connection.erl  agent_web_listener.erl  call_queue.erl  call_queue_config.erl  call_queue_config_mnesia.erl  cdr.erl  cdr_csv.erl  cdr_dets.erl  cdr_odbc.erl  cdr_tcp_pusher.erl  cook.erl  cook_supervisor.erl  cpx-rel-0.1.rel  cpx-rel-0.1.rel.src  cpx.app  cpx.erl  cpx_agent.proto  cpx_agent_connection.erl  cpx_agent_event.erl  cpx_agent_tcp_client.erl  cpx_agent_tcp_connection.erl  cpx_agent_tcp_listener.erl  cpx_base.proto  cpx_cdr.proto  cpx_hooks.erl  (+55 more)
src/proto/: cpx_cdr.proto
tests/: agent_json_test.rb  sip_bot_config_example.hrl  sip_bot_manager_dialplan_example.xml
tests/dummy_callcenter_setups/: 100-10c-1a.hrl  100-1c-10a.hrl  100-both.hrl  250-10c-1a.hrl  250-1c-10a.hrl  250-both.hrl  500-10c-1a.hrl  500-1c-10a.hrl  500-both.hrl  slow-calls.hrl
tests/emails/: delivery_notice.eml  doctype.eml  html.eml  replaced_url.eml  script.eml  tos.eml  unwrapped-html.eml
tests/scripts/: agenttcp.escript  mkall.rb
tests/walkthroughs/: agentui.html
www/admin/: agents.js  agents.js.old  index.html  loadAgents.html  main.js  queues.js  skills.js  test.html
www/agent/: Agent.js  Stopwatch.js  eventLog.js  index.html  main.js
www/dynamic/: data.css  monitor.html  monitor.js  test.html  tv.css  tv.html  tv.js  tv_config.js.sample
(+1448 files in other folders)
